[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piqrypt-langchain-integration"
version = "1.0.0"
description = "PiQrypt Verifiable AI Agent Memory bridge for LangChain"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "PiQrypt Contributors", email = "contact@piqrypt.org"}
]
requires-python = ">=3.9"
keywords = ["cryptography", "langchain", "audit", "ai-agents", "aiss", "verifiable-memory"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "piqrypt>=1.5.1",
    "langchain>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/piqrypt/piqrypt-langchain-integration"
Documentation = "https://github.com/piqrypt/piqrypt/blob/main/INTEGRATION.md#3-langchain"
Repository = "https://github.com/piqrypt/piqrypt-langchain-integration"
"Bug Tracker" = "https://github.com/piqrypt/piqrypt/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["piqrypt_langchain*"]
